[package]
name = "tw_any_coin"
version = "0.1.0"
edition = "2021"

[dependencies]
tw_coin_entry = { path = "../tw_coin_entry" }
tw_coin_registry = { path = "../tw_coin_registry" }
tw_keypair = { path = "../tw_keypair" }
tw_memory = { path = "../tw_memory" }
tw_misc = { path = "../tw_misc" }

[features]
test-utils = []

[dev-dependencies]
tw_any_coin = { path = "./", features = ["test-utils"] }
tw_encoding = { path = "../tw_encoding" }
tw_keypair = { path = "../tw_keypair", features = ["test-utils"] }
tw_memory = { path = "../tw_memory", features = ["test-utils"] }
tw_number = { path = "../tw_number" }
tw_proto = { path = "../tw_proto" }
