[package]
name = "tw_any_coin"
version = "0.1.0"
edition = "2021"

[dependencies]
tw_coin_entry = { path = "../tw_coin_entry" }
tw_coin_registry = { path = "../tw_coin_registry" }
tw_encoding = { path = "../tw_encoding" }
tw_hash = { path = "../tw_hash" }
tw_keypair = { path = "../tw_keypair" }
tw_memory = { path = "../tw_memory" }
tw_misc = { path = "../tw_misc" }
tw_proto = { path = "../tw_proto", optional = true }

[features]
test-utils = [
    "tw_keypair/test-utils",
    "tw_memory/test-utils",
    "tw_misc/test-utils",
    "tw_proto"
]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tw_any_coin = { path = "./", features = ["test-utils"] }
tw_cosmos_sdk = { path = "../tw_cosmos_sdk", features = ["test-utils"] }
tw_keypair = { path = "../tw_keypair", features = ["test-utils"] }
tw_memory = { path = "../tw_memory", features = ["test-utils"] }
tw_misc = { path = "../tw_misc", features = ["test-utils"] }
tw_number = { path = "../tw_number" }
