[package]
name = "tw_aptos"
version = "0.1.0"
edition = "2021"

[dependencies]
tw_coin_entry = { path = "../tw_coin_entry" }
tw_keypair = { path = "../tw_keypair" }
tw_proto = { path = "../tw_proto" }
tw_number = { path = "../tw_number" }
tw_hash = { path = "../tw_hash" }
tw_memory = { path = "../tw_memory" }

[dev-dependencies]
tw_coin_entry = { path = "../tw_coin_entry", features = ["test-utils"] }
tw_encoding = { path = "../tw_encoding" }
tw_number = { path = "../tw_number", features = ["helpers"] }
