[package]
name = "tw_bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.30.0"
secp256k1 = { version = "0.27.0", features = [ "global-context", "rand-std" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tw_coin_entry = { path = "../tw_coin_entry", features = ["test-utils"] }
tw_utxo = { path = "../tw_utxo" }
tw_encoding = { path = "../tw_encoding" }
tw_memory = { path = "../tw_memory" }
tw_misc = { path = "../tw_misc" }
tw_proto = { path = "../tw_proto" }
tw_keypair = { path = "../tw_keypair" }

[dev-dependencies]
wallet-core-rs = { path = "../wallet_core_rs" }
