[package]
name = "tw_coin_registry"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tw_bitcoin = { path = "../tw_bitcoin" }
tw_coin_entry = { path = "../tw_coin_entry" }
tw_ethereum = { path = "../tw_ethereum" }
tw_evm = { path = "../tw_evm" }
tw_keypair = { path = "../tw_keypair" }
tw_memory = { path = "../tw_memory" }
tw_misc = { path = "../tw_misc" }
tw_ronin = { path = "../tw_ronin" }
