[package]
name = "tw_cosmos_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-protobuf = "0.8.1"
tw_coin_entry = { path = "../tw_coin_entry" }
tw_encoding = { path = "../tw_encoding" }
tw_hash = { path = "../tw_hash" }
tw_keypair = { path = "../tw_keypair" }
tw_memory = { path = "../tw_memory" }
tw_number = { path = "../tw_number" }
tw_proto = { path = "../tw_proto" }

[dev-dependencies]
tw_coin_entry = { path = "../tw_coin_entry", features = ["test-utils"] }

[build-dependencies]
pb-rs = "0.10.0"
