[package]
name = "tw_cosmos_sdk"
version = "0.1.0"
edition = "2021"

[features]
test-utils = []

[dependencies]
quick-protobuf = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tw_bech32_address = { path = "../tw_bech32_address" }
tw_coin_entry = { path = "../tw_coin_entry" }
tw_encoding = { path = "../tw_encoding" }
tw_hash = { path = "../tw_hash" }
tw_keypair = { path = "../tw_keypair" }
tw_memory = { path = "../tw_memory" }
tw_misc = { path = "../tw_misc" }
tw_number = { path = "../tw_number" }
tw_proto = { path = "../tw_proto" }

[dev-dependencies]
tw_coin_entry = { path = "../tw_coin_entry", features = ["test-utils"] }
tw_cosmos_sdk = { path = "./", features = ["test-utils"] }
tw_misc = { path = "../tw_misc", features = ["test-utils"] }

[build-dependencies]
pb-rs = "0.10.0"
