
[package]
name = "tw_crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
bip32 = "0.5.3"
bip39 = { version = "2.1.0", features = ["rand" ] }
bs58 = { version = "0.5.0" }
cbc = "0.1.2"
ctr = "0.9.2"
ed25519-bip32 = "0.4.1"
pbkdf2 = "0.12.2"
salsa20 = "0.10.2"
sha2 = "0.10.8"
strum_macros = "0.25"
tw_encoding = { path = "../tw_encoding" }
tw_hash = { path = "../tw_hash" }
tw_keypair = { path = "../tw_keypair" }
tw_macros = { path = "../tw_macros" }
tw_memory = { path = "../tw_memory" }
tw_misc = { path = "../tw_misc" }
zeroize = "1.8.1"

[dev-dependencies]
tw_memory = { path = "../tw_memory", features = ["test-utils"] }
serde_json = "1.0"
