[package]
name = "tw_encoding"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
bcs = "0.1.6"
bech32 = "0.9.1"
bs58 = "0.4.0"
ciborium = "0.2.1"
data-encoding = "2.3.3"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
tw_memory = { path = "../tw_memory" }

[dev-dependencies]
serde_bytes = "0.11.12"