[package]
name = "tw_evm"
version = "0.1.0"
edition = "2021"

[features]
arbitrary = ["dep:arbitrary", "tw_hash/arbitrary", "tw_number/arbitrary"]

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
ethabi = { version = "18.0.0", features = ["full-serde"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
rlp = "0.5.2"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tw_coin_entry = { path = "../tw_coin_entry" }
tw_encoding = { path = "../tw_encoding" }
tw_hash = { path = "../tw_hash" }
tw_keypair = { path = "../tw_keypair" }
tw_memory = { path = "../tw_memory" }
tw_misc = { path = "../tw_misc" }
tw_number = { path = "../tw_number", features = ["ethabi"] }
tw_proto = { path = "../tw_proto" }

[dev-dependencies]
tw_coin_entry = { path = "../tw_coin_entry", features = ["test-utils"] }
