[package]
name = "tw_evm"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
rlp = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tw_coin_entry = { path = "../tw_coin_entry" }
tw_encoding = { path = "../tw_encoding" }
tw_hash = { path = "../tw_hash" }
tw_keypair = { path = "../tw_keypair" }
tw_macros = { path = "../tw_macros" }
tw_memory = { path = "../tw_memory" }
tw_misc = { path = "../tw_misc" }
tw_number = { path = "../tw_number", features = ["serde"] }
tw_proto = { path = "../tw_proto" }

[dev-dependencies]
tw_coin_entry = { path = "../tw_coin_entry", features = ["test-utils"] }
tw_memory = { path = "../tw_memory", features = ["test-utils"] }
tw_keypair = { path = "../tw_keypair", features = ["test-utils"]  }
