[package]
name = "tw_hash"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
blake-hash = "0.4.1"
blake2b-ref = "0.3.1"
digest = "0.10.6"
groestl = "0.10.1"
hmac = "0.12.1"
ripemd = "0.1.3"
serde = { version = "1.0", features = ["derive"], optional = true }
sha1 = "0.10.5"
sha2 = "0.10.6"
sha3 = "0.10.6"
tw_encoding = { path = "../tw_encoding" }
tw_memory = { path = "../tw_memory" }
zeroize = "1.8.1"

[dev-dependencies]
serde_json = "1.0"
