[package]
name = "tw_hash"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
blake-hash = "0.4.1"
blake2b-ref = "0.3.1"
digest = "0.11.2"
groestl = "0.11.0"
hmac = "0.13.0"
ripemd = "0.2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
sha1 = "0.11.0"
sha2 = "0.11.0"
sha3 = "0.11.0"
tw_encoding = { path = "../tw_encoding" }
tw_memory = { path = "../tw_memory" }
zeroize = "1.8.2"

[dev-dependencies]
serde_json = "1.0"
