[package]
name = "tw_internet_computer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-certification = "0.25.0"
ic-ledger-types = "0.7.0"
candid = "0.9.3"
crc32fast = "1.3.2"
der = { version = "0.7.3", features = ["alloc"] }
tw_encoding = { path = "../tw_encoding" }
tw_hash = { path = "../tw_hash" }
tw_memory = { path = "../tw_memory" }
tw_keypair = { path = "../tw_keypair" }
pkcs8 = { version = "0.10.2", features = ["alloc"] }
k256 = { version = "0.13.0", features = [
    "ecdh",
    "ecdsa",
    "schnorr",
    "std",
    "pkcs8",
], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_cbor = "0.11.2"
prost = "0.11.9"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11.9"
serde_json = "1.0.57"
comparable = { version = "0.5.1", features = ["derive"] }
sha2 = "0.10.6"
maplit = "1.0.2"
serde_bytes = "0.11.2"

[dev-dependencies]
k256 = { version = "0.13.0", features = ["pem"], default-features = false }
