[package]
name = "tw_internet_computer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.9.3"
ic-certification = "0.25.0"
ic-ledger-types = "0.7.0"
maplit = "1.0.2"
quick-protobuf = "0.8.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.2"
serde_cbor = "0.11.2"
sha2 = "0.10.6"
tw_encoding = { path = "../tw_encoding" }
tw_hash = { path = "../tw_hash" }
tw_keypair = { path = "../tw_keypair" }
tw_memory = { path = "../tw_memory" }
tw_proto = { path = "../tw_proto" }

[build-dependencies]
pb-rs = "0.10.0"
