[package]
name = "tw_keypair"
version = "0.1.0"
edition = "2021"

[features]
test-utils = []

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
lazy_static = "1.4.0"
rand_core = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
tw_encoding = { path = "../tw_encoding" }
tw_hash = { path = "../tw_hash" }
tw_memory = { path = "../tw_memory" }
tw_misc = { path = "../tw_misc" }
zeroize = "1.8.1"
# ECDSA specific:
ecdsa = "0.16.6"
der = "0.7.3"
k256 = { version = "0.13.0", features = ["ecdh", "ecdsa", "pkcs8", "schnorr", "std"], default-features = false }
p256 = { version = "0.13.0", features = ["ecdsa", "std"], default-features = false }
pkcs8 = "0.10.2"
rfc6979 = "0.4.0"
# ED25519 specific:
blake2 = "0.10.6"
curve25519-dalek = { version = "4.1", features = ["digest", "legacy_compatibility"] }
digest = "0.10"
sha2 = "0.10.6"
# Bitcoin schnorr specific:
bitcoin = { version = "0.30.0", features = ["rand-std"] }
secp256k1 = { version = "0.27.0", features = ["global-context", "rand-std"] }
# TON Session key-exchange specific:
crypto_box = "0.9.1"
# Starknet specific:
starknet-crypto = "0.5.0"
starknet-ff = "0.3.2"

[dev-dependencies]
serde_json = "1.0"
tw_keypair = { path = "./", features = ["test-utils"] }
tw_memory = { path = "../tw_memory", features = ["test-utils"] }
