[package]
name = "tw_number"
version = "0.1.0"
edition = "2021"

[dependencies]
ethabi = { version = "18.0.0", optional = true }
lazy_static = "1.4.0"
primitive-types = "0.12.1"
serde = { version = "1.0.159", features = ["derive"], optional = true }
tw_hash = { path = "../tw_hash" }
tw_memory = { path = "../tw_memory" }

[dev-dependencies]
tw_encoding = { path = "../tw_encoding" }

[features]
default = ["helpers", "serde"]
helpers = []
