[package]
name = "tw_number"
version = "0.1.0"
edition = "2021"

[features]
arbitrary = ["dep:arbitrary", "primitive-types/arbitrary"]
default = ["helpers", "serde"]
helpers = []

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
lazy_static = "1.4.0"
primitive-types = "0.10.1"
serde = { version = "1.0", features = ["derive"], optional = true }
tw_hash = { path = "../tw_hash" }
tw_memory = { path = "../tw_memory" }

[dev-dependencies]
tw_encoding = { path = "../tw_encoding" }
