[package]
name = "wallet-core-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "wallet_core_rs"
crate-type = ["staticlib", "rlib"] # Creates static lib

[features]
default = [
    "any-coin",
    "bitcoin",
    "ethereum",
    "evm",
    "keypair",
    "solana",
    "ton",
    "utils",
]
any-coin = ["tw_any_coin"]
bitcoin = ["tw_bitcoin", "tw_coin_registry"]
ethereum = ["tw_ethereum", "tw_coin_registry"]
evm = ["tw_evm"]
keypair = ["tw_keypair"]
solana = ["tw_solana"]
ton = ["tw_ton"]
utils = [
    "tw_encoding",
    "tw_hash",
    "tw_memory",
    "tw_number",
    "tw_proto",
    "uuid"
]

[dependencies]
bitreader = "0.3.8"
tw_any_coin = { path = "../tw_any_coin", optional = true }
tw_bitcoin = { path = "../chains/tw_bitcoin", optional = true }
tw_coin_registry = { path = "../tw_coin_registry", optional = true }
tw_encoding = { path = "../tw_encoding", optional = true }
tw_ethereum = { path = "../chains/tw_ethereum", optional = true }
tw_evm = { path = "../tw_evm", optional = true }
tw_hash = { path = "../tw_hash", optional = true }
tw_keypair = { path = "../tw_keypair", optional = true }
tw_memory = { path = "../tw_memory", optional = true }
tw_number = { path = "../tw_number", optional = true }
tw_macros = { path = "../tw_macros" }
tw_misc = { path = "../tw_misc" }
tw_proto = { path = "../tw_proto", optional = true }
tw_solana = { path = "../chains/tw_solana", optional = true }
tw_ton = { path = "../chains/tw_ton", optional = true }
uuid = { version = "1.7", features = ["v4"], optional = true }
